--- a/study/gsap/index.html
+++ b/study/gsap/index.html
@@ -116,6 +116,6 @@
             </li>
         </ul>
     </div>
-<script type="text/javascript" src="/assets/js/bundle.js"></script>
+<script type="text/javascript" src="./assets/js/bundle.js"></script>
 </body>
 </html>
